Fixed drop down boxes for selecting school and role on mobile

--- a/static/css/mobile_stylesheet.css
+++ b/static/css/mobile_stylesheet.css
@@ -236,31 +236,6 @@ html, body {
     width: 48%;
 }
 
-.select2-results__options {
-    position: fixed;
-    top:0;
-    left:0;
-    width:100% !important;
-    height:100% !important;
-    max-height: none !important;
-    background: white;
-}
-
-.select2-selection__rendered {
-    line-height: 50px !important;
-}
-.select2-container .select2-selection--single {
-    height: 50px !important;
-}
-.select2-selection__arrow {
-    height: 50px !important;
-}
-
-.sth-select-popup, .sth-select-item, .sth-select-filter {
-    /*font-size: 3em;*/
-    /*height: auto !important;*/
-}
-
 .signUpError {
     font-size: 5vw;
 }
@@ -276,4 +251,17 @@ html, body {
 
 .box-content {
     width: 80%;
+}
+
+.mobileSelect-container {
+    font-size: 5vw;
+    font-family: Nunito;
+}
+
+button.btn-mobileSelect-gen:not([class*=col-]):not([class*=form-control]):not(.input-group-btn):not(.btn-block) {
+    font-size: 4vw;
+}
+
+.mobileSelect-container .mobileSelect-title {
+    padding: 0px 20px !important;
 }
